--- a/jobs/templates/jobs/login.html
+++ b/jobs/templates/jobs/login.html
@@ -9,60 +9,31 @@
 
 {% block content %}
 <div class="login-container">
-    <div class="login-card">
-        <h2>Welcome Back</h2>
-        <p class="subtitle">Sign in to continue your job search</p>
-
-        <form method="post" class="login-form">
-            {% csrf_token %}
-            {% if form.errors %}
-            <div class="error-message">
-                {% for field in form %}
-                    {% for error in field.errors %}
-                        <p>{{ error }}</p>
-                    {% endfor %}
-                {% endfor %}
+    <div class="login-box">
+        <h2>Login to JobPortal</h2>
+        
+        {% if messages %}
+        <div class="messages">
+            {% for message in messages %}
+            <div class="message {{ message.tags }}">
+                {{ message }}
             </div>
-            {% endif %}
-
-            <div class="form-group">
-                <label for="id_username">Email</label>
-                <input type="email" name="username" id="id_username" required>
-            </div>
-
-            <div class="form-group">
-                <label for="id_password">Password</label>
-                <input type="password" name="password" id="id_password" required>
-            </div>
-
-            <div class="form-options">
-                <label class="remember-me">
-                    <input type="checkbox" name="remember">
-                    <span>Remember me</span>
-                </label>
-                <a href="{% url 'password_reset' %}" class="forgot-password">Forgot Password?</a>
-            </div>
-
-            <button type="submit" class="login-btn">Sign In</button>
-        </form>
-
-        <div class="social-login">
-            <p>Or continue with</p>
-            <div class="social-buttons">
-                <button class="social-btn google">
-                    <img src="{% static 'images/google-icon.png' %}" alt="Google">
-                    Google
-                </button>
-                <button class="social-btn linkedin">
-                    <img src="{% static 'images/linkedin-icon.png' %}" alt="LinkedIn">
-                    LinkedIn
-                </button>
-            </div>
+            {% endfor %}
         </div>
+        {% endif %}
 
-        <p class="signup-link">
-            Don't have an account? <a href="{% url 'register' %}">Sign up</a>
-        </p>
+        <form method="POST" action="{% url 'login' %}">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="username">Username</label>
+                <input type="text" id="username" name="username" required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password</label>
+                <input type="password" id="password" name="password" required>
+            </div>
+            <button type="submit" class="login-button">Login</button>
+        </form>
     </div>
 </div>
 {% endblock %}
