Add Google sign-in button to login page and style it; enhance user experience with social authentication option.

--- a/jobs/templates/jobs/login.html
+++ b/jobs/templates/jobs/login.html
@@ -34,6 +34,15 @@
             </div>
             <button type="submit" class="login-button">Login</button>
         </form>
+
+        <div class="social-container">
+            <button class="google-btn">
+                <a href="{% url 'social:begin' 'google-oauth2' %}">
+                    <img src="https://www.google.com/favicon.ico" alt="Google">
+                    Sign in with Google
+                </a>
+            </button>
+        </div>
     </div>
 </div>
 {% endblock %}
